--- a/composer.json
+++ b/composer.json
@@ -15,5 +15,6 @@
             "email": "kejarkoding@gmail.com"
         }
     ],
-    "minimum-stability": "stable"
+    "minimum-stability": "stable",
+    "prefer-stable": true
 }
