--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,12 @@
         "whatsapp-chat",
         "whatsapp-api-php"
     ],
-    "require": {},
+    "require": {
+        "php": ">=5.6.0"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9.0"
+    },
     "license": "MIT",
   
     "autoload": {
