--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,6 @@
             "email": "kejarkoding@gmail.com"
         }
     ],
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "prefer-stable  ": true
 }
